[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/task/task.gd" type="Script" id=1]
[ext_resource path="res://textures/ui/ui_sheet.png" type="Texture" id=2]
[ext_resource path="res://textures/ui/spiral_tube.png" type="Texture" id=3]
[ext_resource path="res://resources/font.tres" type="DynamicFont" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 60, 0, 24, 72 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 18, 16, 48 )

[node name="Task" type="CanvasLayer" groups=["task"]]
script = ExtResource( 1 )

[node name="TaskProgress" type="TextureProgress" parent="."]
margin_left = 4.0
margin_top = 18.0
margin_right = 20.0
margin_bottom = 66.0
mouse_filter = 2
value = 100.0
texture_progress = SubResource( 1 )
fill_mode = 3

[node name="Background" type="TextureRect" parent="TaskProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -42.0
margin_right = 12.0
margin_bottom = 30.0
texture = SubResource( 2 )
stretch_mode = 4

[node name="Foreground" type="TextureRect" parent="TaskProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -24.0
margin_right = 8.0
margin_bottom = 24.0
mouse_filter = 2
texture = SubResource( 3 )
stretch_mode = 4

[node name="Description" type="Label" parent="."]
visible = false
margin_left = 27.0
margin_top = 10.0
margin_right = 263.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0.0823529, 0.0745098, 0.109804, 1 )
custom_fonts/font = ExtResource( 4 )
text = "afsdfsafsdfsdafdfdasfsdfsdafsdf"
autowrap = true

[connection signal="mouse_entered" from="TaskProgress/Background" to="." method="_on_Background_mouse_entered"]
[connection signal="mouse_exited" from="TaskProgress/Background" to="." method="_on_Background_mouse_exited"]
